[package]
name = "token-service"
version = "0.1.1"
description = "Simple REST service for auth tokens management"
authors = ["Pavel Tereschenko <me@stupidcat.wtf>"]
homepage = "https://github.com/bigslycat/token-service"
publish = false
license = "MIT"

[dependencies]
actix-web = "0.7"
clap = "2.32"
failure = "0.1"
futures = "0.1"
rand = "0.6"
redis = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
